@@ -252,7 +252,7 @@
   <string><id>321</id><value>Error cleaning artists</value></string>
   <string><id>322</id><value>Cleaning genres...</value></string>
   <string><id>323</id><value>Error cleaning genres</value></string>
-  <string><id>324</id><value>Cleaning pathes...</value></string>
+  <string><id>324</id><value>Cleaning paths...</value></string>
   <string><id>325</id><value>Error cleaning pathes</value></string>
   <string><id>326</id><value>Cleaning albums...</value></string>
   <string><id>327</id><value>Error cleaning albums</value></string>
@@ -617,6 +617,15 @@
   <string><id>13335</id><value>Make Default</value></string>
   <string><id>13336</id><value>Remove Button</value></string>
   <string><id>13337</id><value>- 2 Channel PCM Passthrough</value></string>
+  <string><id>13338</id><value>Front LED</value></string>
+  <string><id>13339</id><value>Front LED Colour</value></string>
+  <string><id>13340</id><value>Leave As Is</value></string>
+  <string><id>13341</id><value>Green</value></string>
+  <string><id>13342</id><value>Orange</value></string>
+  <string><id>13343</id><value>Red</value></string>
+  <string><id>13344</id><value>Cycle</value></string>
+  <string><id>13345</id><value>Switch LED off on Playback</value></string>
+
   <string><id>14000</id><value>Stacking: Off</value></string>
   <string><id>14001</id><value>Stacking: Simple</value></string>
   <string><id>14002</id><value>Stacking: Fuzzy</value></string>
