@@ -262,6 +262,10 @@ CGUISettings::CGUISettings(void)
 	AddInt(10,"CacheDVD.DVDRom", 14034, 16384, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
 	AddInt(11,"CacheDVD.LAN", 14035, 16384, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
 
+	AddCategory(4, "LED", 13338);
+	AddInt(1, "LED.Colour", 13339, LED_COLOUR_NO_CHANGE, LED_COLOUR_NO_CHANGE, 1, LED_COLOUR_CYCLE, SPIN_CONTROL_TEXT);
+	AddInt(2, "LED.DisableOnPlayback", 13345, LED_PLAYBACK_OFF, LED_PLAYBACK_OFF, 1, LED_PLAYBACK_VIDEO_MUSIC, SPIN_CONTROL_TEXT);
+
 	AddCategory(4, "LCD", 448);
 	AddInt(1,"LCD.Mode", 456, LCD_MODE_NONE, LCD_MODE_NONE, 1, LCD_MODE_NOTV, SPIN_CONTROL_TEXT);
 	AddInt(2,"LCD.Type", 4501, LCD_MODE_TYPE_LCD, LCD_MODE_TYPE_LCD, 1, LCD_MODE_TYPE_VFD, SPIN_CONTROL_TEXT);
