@@ -1,0 +1,8 @@
+#pragma once
+#include "LED.h"
+
+class ILED
+{
+public:
+  static void CLEDControl(int ixLED);
+};
