@@ -115,7 +115,12 @@ public:
 		LED_REGISTER_CYCLE3_RED		= 0x10,
 		LED_REGISTER_CYCLE2_RED		= 0x20,
 		LED_REGISTER_CYCLE1_RED		= 0x40, 
-		LED_REGISTER_CYCLE0_RED		= 0x80
+		LED_REGISTER_CYCLE0_RED		= 0x80,
+		
+		LED_REGISTER_CYCLE3_ORANGE	= 0x11,
+		LED_REGISTER_CYCLE2_ORANGE	= 0x22,
+		LED_REGISTER_CYCLE1_ORANGE	= 0x44,
+		LED_REGISTER_CYCLE0_ORANGE  = 0x88
 
 	};
 
